# discordrs

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  discordrs.service  mensagens.db  mensagens.sqlite  mensagens.sqlite-shm  mensagens.sqlite-wal  sqlite:mensagens.sqlite  sqlite:mensagens.sqlite-shm  sqlite:mensagens.sqlite-wal
migrations/: 20221115100122_tipo_mensagem_e_channelid.sql
src/: commands.rs  config.json.helper  database.rs  funcs_msg_discord.rs  funcs_twitter.rs  helper_funcs.rs  helper_structs.rs  main.rs
src/commands/: common.rs  mod.rs  twitter.rs
src/commands/slash/: ola.rs
src/database/: mensagens.rs  queries.rs
src/handler/: handler.rs
src/non_command_input/: common.rs
