[package]
name = "discordrs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full","macros", "rt-multi-thread", "signal"] }
serenity = { version = "0.11.5", features = ["builder", "cache", "client", "framework", "gateway", "http", "model","voice", "standard_framework", "utils","rustls_backend"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
egg-mode = "0.16"
songbird = "0.2.2"
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
cascade = "1.0.1"
m3u8-rs = "5.0.3"
wakey = "0.3.0"
